fixed item alignment

--- a/app/assets/stylesheets/pages/items/_index.scss
+++ b/app/assets/stylesheets/pages/items/_index.scss
@@ -120,3 +120,7 @@ ul.dropdown-menu {
   color: white!important;
   font-weight: bold;
 }
+
+.form-toggler p.item-value.name {
+  text-align: left;
+}
